--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
     "vxe-table": "^3.3.3",
-    "xe-utils": "^3.2.1"
+    "xe-utils": "^3.2.1",
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
