--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "0.18.1",
     "core-js": "3.6.5",
+    "cos-js-sdk-v5": "^1.2.13",
     "element-ui": "2.13.2",
     "file-saver": "^2.0.5",
     "install": "^0.13.0",
