--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "npm": "^7.14.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "qrcode": "^1.4.4",
     "vue": "2.6.10",
+    "vue-print-nb": "^1.7.4",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
     "vxe-table": "^3.3.3",
